--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "angular-resource": "1.3.0",
     "angular-route": "1.3.0",
     "angular-animate": "1.3.0",
-    "fontawesome": "4.2.0"
+    "fontawesome": "4.2.0",
+    "ngstorage": "~0.3.0",
+    "lodash": "~3.2.0"
   }
 }
