--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-animate": "1.3.0",
     "fontawesome": "4.2.0",
     "ngstorage": "~0.3.0",
-    "lodash": "~3.2.0"
+    "lodash": "~3.2.0",
+    "pleasejs": "~0.4.2"
   }
 }
