Removed ngStorage, fixed package and bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "Bower file",
   "version": "0.0.1",
-  "homepage": "https://github.com/vikingsofcode/nakkikone",
+  "homepage": "https://github.com/laznic/basket-app",
   "authors": [
-    "Niklas Lepistö <niklas@vikingsofco.de>"
+    "Niklas Lepistö <niklas@demtrees.com>"
   ],
   "license": "MIT",
   "private": true,
