--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "project-template",
+  "name": "basket-app",
   "version": "1.0.0",
-  "description": "Vikings of Code frontend template",
+  "description": "Basket - the superior grocery list application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vikingsofcode/frontend-template.git"
+    "url": "https://github.com/laznic/basket-app.git"
   },
   "keywords": [
     "angular",
@@ -21,9 +21,9 @@
   "author": "Vikings of Code",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/vikingsofcode/frontend-template/issues"
+    "url": "https://github.com/laznic/basket-app/issues"
   },
-  "homepage": "https://github.com/vikingsofcode/frontend-template",
+  "homepage": "https://github.com/laznic/basket-app",
   "devDependencies": {
     "bower": "1.3.9",
     "browser-sync": "2.0.1",
