--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-concat": "2.4.3",
     "gulp-jade": "0.11.0",
     "gulp-minify-css": "0.3.8",
+    "gulp-nodemon": "^1.0.5",
     "gulp-plumber": "0.6.5",
     "gulp-streamify": "0.0.5",
     "gulp-stylus": "2.0.0",
@@ -45,7 +46,15 @@
     "vinyl-source-stream": "1.0.0",
     "watchify": "2.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "hapi": "^8.2.0",
+    "jade": "^1.9.2",
+    "joi": "^5.1.0",
+    "mongodb": "^1.4.31",
+    "socket.io": "^1.3.4",
+    "visionary": "^2.0.0",
+    "yar": "^3.0.3"
+  },
   "browserify": {
     "transform": [
       "debowerify",
