--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     "watchify": "2.0.0"
   },
   "dependencies": {
+    "glue": "^2.0.0",
     "hapi": "^8.2.0",
+    "hapi-mongo-models": "^1.1.0",
     "jade": "^1.9.2",
     "joi": "^5.1.0",
+    "lout": "^6.2.0",
     "mongodb": "^1.4.31",
     "socket.io": "^1.3.4",
     "visionary": "^2.0.0",
