--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "glue": "^2.0.0",
     "hapi": "^8.2.0",
     "hapi-mongo-models": "^1.1.0",
+    "hapio": "^1.1.0",
     "jade": "^1.9.2",
     "joi": "^5.1.0",
     "lout": "^6.2.0",
