Added mongo support

--- a/package.json
+++ b/package.json
@@ -48,13 +48,17 @@
   },
   "dependencies": {
     "glue": "^2.0.0",
-    "hapi": "^8.2.0",
+    "hapi": "^8.4.0",
     "hapi-mongo-models": "^1.1.0",
     "hapio": "^1.1.0",
+    "hoek": "^2.12.0",
     "jade": "^1.9.2",
-    "joi": "^5.1.0",
+    "joi": "^6.0.8",
     "lout": "^6.2.0",
     "mongodb": "^1.4.31",
+    "nodemailer": "^1.3.1",
+    "nodemailer-wellknown": "^0.1.5",
+    "object-assign": "^2.0.0",
     "socket.io": "^1.3.4",
     "visionary": "^2.0.0",
     "yar": "^3.0.3"
